--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
             </div>
             </section>
 
-    <!--Описание работы-->
-                    <!-- <section class="selection">
+    <!-- Описание работы -->
+                    <!-÷- <section class="selection">
                         <div class="container">
                         <ul class="features-list list">
                             <li class="features-list__item">
                                 <div class="features-list__img">
                                     <svg class="features-list__icon">
-                                        <use href="./img/sprite.svg#icon-antenna" ></use>
+                                        <use href="./img/sprite.svg#icon-antenna" width="70" height="70" ></use>
                                     </svg>
                                 </div>
                                 <div>
@@ -127,7 +127,7 @@
                             <li class="features-list__item">
                                 <div class="features-list__img">
                                     <svg class="features-list__icon">
-                                        <use href="./img/sprite.svg#icon-clock" ></use>
+                                        <use href="./img/sprite.svg#icon-clock" width="70" height="70" ></use>
                                     </svg>
                                 </div>
                                 <div>
@@ -138,7 +138,7 @@
                             <li class="features-list__item">
                                 <div class="features-list__img">
                                     <svg class="features-list__icon">
-                                        <use href="./img/sprite.svg#icon-diagram"></use>
+                                        <use href="./img/sprite.svg#icon-diagram" width="70" height="70"></use>
                                     </svg>
                                 </div>
                                 <div>
@@ -149,7 +149,7 @@
                             <li class="features-list__item">
                                 <div class="features-list__img">
                                     <svg class="features-list__icon">
-                                        <use href="./img/sprite.svg#icon-astronaut"></use>
+                                        <use href="./img/sprite.svg#icon-astronaut" width="70" height="70"></use>
                                     </svg>
                                 </div>
                                 <div>
@@ -161,7 +161,7 @@
                         </div>
                     </section> -->
                     
-                    <!-- <section class="work-img">
+        <section class="work-img">
                         <div class="container">
                         <h2 class="second-title">Чем мы занимаемся</h2>
                         <ul class="work-list list">
@@ -185,14 +185,20 @@
                             </li>
                         </ul>
                         </div>
-                    </section> -->
+                    </section>
     <!--Команда WebStudio-->
-            <!-- <section class="team-section">
+             <section class="team-section">
                 <div class="container">
                 <h2 class="second-title">Наша команда</h2>
                 <ul class="team">
                     <li class="team__worker list">
-                        <img src="./img/igor.jpg" alt="Фото портрет" width="270" height="260">
+                        <picture>
+                            <source srcset="./img/desktop/worker/igor-img1.jpg 1x , ./img/desktop/worker/igor-img@2x.jpg 2x" media="(min-width:1200px)">
+                            <source srcset="./img/tablet/worker/igor-img1.jpg 1x , ./img/tablet/worker/igor-img@2x.jpg 2x" media="(min-width:768px)">
+                            <source srcset="./img/mobile/worker/igor-img1.jpg 1x , ./img/mobile/worker/igor-img@2x.jpg 2x" media="(min-width:420px)">
+                            <img src="./img/igor.jpg" alt="Фото портрет">
+                        </picture>
+                        
                         <div class="team__worker_info">
                         <h3 class="worker-title">Игорь Демьяненко</h3>
                         <p class="worker-specialty">Product Designer</p>
@@ -200,28 +206,28 @@
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#instagram"></use>
+                                        <use href="./img/sprite.svg#instagram" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#twitter"></use>
+                                        <use href="./img/sprite.svg#twitter" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#facebook"></use>
+                                        <use href="./img/sprite.svg#facebook" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#linkedin"></use>
+                                        <use href="./img/sprite.svg#linkedin" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -229,7 +235,15 @@
                         </div>
                     </li>
                     <li class="team__worker list">
-                        <img src="./img/olga.jpg" alt="Фото портрет" width="270" height="260">
+                        <picture>
+                            <source srcset="./img/desktop/worker/olga-img1.jpg 1x , ./img/desktop/worker/olga-img@2x.jpg 2x"
+                                media="(min-width:1200px)">
+                            <source srcset="./img/tablet/worker/olga-img1.jpg 1x , ./img/tablet/worker/olga-img@2x.jpg 2x"
+                                media="(min-width:768px)">
+                            <source srcset="./img/mobile/worker/olga-img1.jpg 1x , ./img/mobile/worker/olga-img@2x.jpg 2x"
+                                media="(min-width:420px)">
+                            <img src="./img/olga.jpg" alt="Фото портрет">
+                        </picture>
                         <div class="team__worker_info">
                         <h3 class="worker-title">Ольга Репина</h3>
                         <p class="worker-specialty">Frontend Developer</p>
@@ -237,28 +251,28 @@
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#instagram"></use>
+                                        <use href="./img/sprite.svg#instagram" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#twitter"></use>
+                                        <use href="./img/sprite.svg#twitter" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#facebook"></use>
+                                        <use href="./img/sprite.svg#facebook" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#linkedin"></use>
+                                        <use href="./img/sprite.svg#linkedin" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -266,7 +280,15 @@
                         </div>
                     </li>
                     <li class="team__worker list">
-                        <img src="./img/nikolai.jpg" alt="Фото портрет" width="270" height="260">
+                        <picture>
+                            <source srcset="./img/desktop/worker/nikolai-img1.jpg 1x , ./img/desktop/worker/nikolai-img@2x.jpg 2x"
+                                media="(min-width:1200px)">
+                            <source srcset="./img/tablet/worker/nikolai-img1.jpg 1x , ./img/tablet/worker/nikolai-img@2x.jpg 2x"
+                                media="(min-width:768px)">
+                            <source srcset="./img/mobile/worker/nikolai-img1.jpg 1x , ./img/mobile/worker/nikolai-img@2x.jpg 2x"
+                                media="(min-width:420px)">
+                            <img src="./img/nikolai.jpg" alt="Фото портрет">
+                        </picture>
                         <div class="team__worker_info">
                         <h3 class="worker-title">Николай Тарасов</h3>
                         <p class="worker-specialty">Marketing</p>
@@ -274,28 +296,28 @@
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#instagram"></use>
+                                        <use href="./img/sprite.svg#instagram" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#twitter"></use>
+                                        <use href="./img/sprite.svg#twitter" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#facebook"></use>
+                                        <use href="./img/sprite.svg#facebook" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#linkedin"></use>
+                                        <use href="./img/sprite.svg#linkedin" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -303,7 +325,15 @@
                         </div>
                     </li>
                     <li class="team__worker list">
-                        <img src="./img/mihail.jpg" alt="Фото портрет" width="270" height="260">
+                        <picture>
+                            <source srcset="./img/desktop/worker/mihail-img1.jpg 1x , ./img/desktop/worker/mihail-img@2x.jpg 2x"
+                                media="(min-width:1200px)">
+                            <source srcset="./img/tablet/worker/mihail-img1.jpg 1x , ./img/tablet/worker/mihail-img@2x.jpg 2x"
+                                media="(min-width:768px)">
+                            <source srcset="./img/mobile/worker/mihail-img1.jpg 1x , ./img/mobile/worker/mihail-img@2x.jpg 2x"
+                                media="(min-width:420px)">
+                            <img src="./img/mihail.jpg" alt="Фото портрет">
+                        </picture>
                         <div class="team__worker_info">
                         <h3 class="worker-title">Михаил Ермаков</h3>
                         <p class="worker-specialty">UI Designer</p>
@@ -311,28 +341,28 @@
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#instagram"></use>
+                                        <use href="./img/sprite.svg#instagram" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#twitter"></use>
+                                        <use href="./img/sprite.svg#twitter" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#facebook"></use>
+                                        <use href="./img/sprite.svg#facebook" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
                             <li class="social-list__item">
                                 <a href="" class="social-list__link">
                                     <svg class="social-list-icon">
-                                        <use href="./img/sprite.svg#linkedin"></use>
+                                        <use href="./img/sprite.svg#linkedin" width="20" height="20"></use>
                                     </svg>
                                 </a>
                             </li>
@@ -341,7 +371,7 @@
                     </li>
                 </ul>
                 </div>
-            </section> -->
+            </section>
     <!--Постоянные клиенты-->
             <!-- <section class="clients">
                 <div class="container">
@@ -530,6 +560,6 @@
     </div> -->
 
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> --> -->
+    <!-- <script src="./js/modal.js"></script> --> 
 </body>
 </html>
