--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </section>
 
     <!-- Описание работы -->
-                    <!-÷- <section class="selection">
+                    <section class="selection">
                         <div class="container">
                         <ul class="features-list list">
                             <li class="features-list__item">
@@ -373,71 +373,71 @@
                 </div>
             </section>
     <!--Постоянные клиенты-->
-            <!-- <section class="clients">
+             <section class="clients">
                 <div class="container">
                     <h2 class="clients-title">Постоянные клиенты</h2>
                     <ul class="clients-list list">
-                        <li class="clients-item">
+                        <li class="clients-list__item">
                             <a href="" class="clients-list__link">
-                                <div class="clients-item-box">
+                                <div class="clients-list__item-box">
                                     <svg class="clients-list__icon1">
-                                        <use href="./img/sprite.svg#icon-logo-1"></use>
+                                        <use href="./img/sprite.svg#icon-logo-1" width="44" height="49"></use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
-                        <li class="clients-item">
+                        <li class="clients-list__item">
                             <a href="" class="clients-list__link">
                                 <div class="clients-item-box">
                                     <svg class="clients-list__icon2">
-                                        <use href="./img/sprite.svg#icon-logo-2"></use>
+                                        <use href="./img/sprite.svg#icon-logo-2" width="40" height="52"></use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
-                        <li class="clients-item">
+                        <li class="clients-list__item">
                             <a href="" class="clients-list__link">
                                 <div class="clients-item-box">
                                     <svg class="clients-list__icon3">
-                                        <use href="./img/sprite.svg#icon-logo-3"></use>
+                                        <use href="./img/sprite.svg#icon-logo-3" width="41" height="42"></use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
-                        <li class="clients-item">
+                        <li class="clients-list__item">
                             <a href="" class="clients-list__link">
                                 <div class="clients-item-box">
                                     <svg class="clients-list__icon4">
-                                        <use href="./img/sprite.svg#icon-logo-4"></use>
+                                        <use href="./img/sprite.svg#icon-logo-4" width="80" height="42"></use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
-                        <li class="clients-item">
+                        <li class="clients-list__item">
                             <a href="" class="clients-list__link">
                                 <div class="clients-item-box">
                                     <svg class="clients-list__icon5">
-                                        <use href="./img/sprite.svg#icon-logo-5"></use>
+                                        <use href="./img/sprite.svg#icon-logo-5" width="59" height="47"></use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
-                        <li class="clients-item">
+                        <li class="clients-list__item">
                             <a href="" class="clients-list__link">
                                 <div class="clients-item-box">
                                     <svg class="clients-list__icon6">
-                                        <use href="./img/sprite.svg#icon-logo-6"></use>
+                                        <use href="./img/sprite.svg#icon-logo-6" width="88" height="45"></use>
                                     </svg>
                                 </div>
                             </a>
                         </li>
                     </ul>
                 </div>
-            </section> -->
+            </section> 
     </main>
 
     <!--Подвал-->
-   <!-- <footer class="footer">
+<footer class="footer"> 
         <div class="container">
             <div class="adres-container">
                 <a href="" class="logo tex-dec"><span class="logo__dark-theme">Web</span>Studio</a>
@@ -457,40 +457,40 @@
             </div>
 
             <div class="invite">
-                    <b class="invite-title">ПРИСОЕДИНЯЙТЕСЬ</b>
+                    <b class="invite__title">ПРИСОЕДИНЯЙТЕСЬ</b>
                     <ul class="soc-list list">
                         <li class="soc-list__item">
                             <a href="" class="soc-list__link">
                                 <svg class="soc-list__icon">
-                                    <use href="./img/sprite.svg#instagram"></use>
+                                    <use href="./img/sprite.svg#instagram" width="20" height="20"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="soc-list__item">
                             <a href="" class="soc-list__link">
                                 <svg class="soc-list__icon">
-                                    <use href="./img/sprite.svg#twitter"></use>
+                                    <use href="./img/sprite.svg#twitter" width="20" height="20"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="soc-list__item">
                             <a href="" class="soc-list__link">
                                 <svg class="soc-list__icon">
-                                    <use href="./img/sprite.svg#facebook"></use>
+                                    <use href="./img/sprite.svg#facebook" width="20" height="20"></use>
                                 </svg>
                             </a>
                         </li>
                         <li class="soc-list__item">
                             <a href="" class="soc-list__link">
                                 <svg class="soc-list__icon">
-                                    <use href="./img/sprite.svg#linkedin"></use>
+                                    <use href="./img/sprite.svg#linkedin" width="20" height="20"></use>
                                 </svg>
                             </a>
                         </li>
                     </ul>
             </div>
             <div class="follow">
-                <b class="invite-title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
+                <b class="invite__title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
                 <form action="#" class="invite-form">
                     <div class="invite-wrapper">
                         <label for="invite"></label>
@@ -506,7 +506,7 @@
                 </form>
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
