--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                             </li>
                         </ul>
                         </div>
-                    </section> -->
+                    </section>
                     
         <section class="work-img">
                         <div class="container">
