--- a/index.html
+++ b/index.html
@@ -28,18 +28,18 @@
                     <a href="" class="site-nav__link tex-dec menu-link">Контакты</a>
                 </li>
             </ul>
-            <ul class="site-nav list contact">  
-                <li class="site-nav__contact-mail">
-                    <a href="mailto:info@devstudio.com" class="site-nav__contact-link tex-dec">
-                        <svg class="site-nav__mail-img">
+            <ul class="contact-nav list contact">  
+                <li class="contact-nav__mail">
+                    <a href="mailto:info@devstudio.com" class="contact-nav__link tex-dec">
+                        <svg class="contact-nav__mail-img">
                             <use href="./img/sprite.svg#icon-mail" width="16" height="12"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="site-nav__contact-tel">
-                    <a href="tel:+380961111111" class="site-nav__contact-link tex-dec">
-                        <svg class="site-nav__phone-img">
+                <li class="contact-nav__tel">
+                    <a href="tel:+380961111111" class="contact-nav__link tex-dec">
+                        <svg class="contact-nav__phone-img">
                             <use href="./img/sprite.svg#icon-smartphone" width="12" height="16"></use>
                         </svg>
                         +38 096 111 11 11
@@ -159,7 +159,7 @@
                             </li>
                         </ul>
                         </div>
-                    </section>
+                    </section> 
                     
         <section class="work-img">
                         <div class="container">
