--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="" class="site-nav__link tex-dec menu-link">Контакты</a>
                 </li>
             </ul>
-            <ul class="contact-nav list contact">  
+            <ul class="contact-nav list">  
                 <li class="contact-nav__mail">
                     <a href="mailto:info@devstudio.com" class="contact-nav__link tex-dec">
                         <svg class="contact-nav__mail-img">
@@ -61,7 +61,7 @@
             </button>
             <ul class="mobile-menu__list list">
                 <li class="mobile-menu__item">
-                    <a href="" class="mobile-menu__link tex-dec menu-link current">Студия</a>
+                    <a href="./index.html" class="mobile-menu__link tex-dec menu-link current">Студия</a>
                 </li>
                 <li class="mobile-menu__item">
                     <a href="./portfolio.html" class="mobile-menu__link tex-dec menu-link">Портфолио</a>
@@ -439,6 +439,7 @@
     <!--Подвал-->
 <footer class="footer"> 
         <div class="container">
+            <div class="footer-info">
             <div class="adres-container">
                 <a href="" class="logo tex-dec"><span class="logo__dark-theme">Web</span>Studio</a>
                 <address class="adress">
@@ -456,7 +457,7 @@
                 </address>
             </div>
 
-            <div class="invite">
+                <div class="invite">
                     <b class="invite__title">ПРИСОЕДИНЯЙТЕСЬ</b>
                     <ul class="soc-list list">
                         <li class="soc-list__item">
@@ -488,7 +489,8 @@
                             </a>
                         </li>
                     </ul>
-            </div>
+                </div>
+                </div>
             <div class="follow">
                 <b class="invite__title">ПОДПИШИТЕСЬ НА РАССЫЛКУ</b>
                 <form action="#" class="invite-form">
@@ -508,7 +510,7 @@
         </div>
     </footer>
 
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button type="button" class="modal-close-btn" data-modal-close>
                 <svg class="btn-close-icon" width="18" height="18">
@@ -557,9 +559,9 @@
                 <button type="submit" class="modal-form-btn">Отправить</button>
             </form>
         </div>
-    </div> -->
+    </div>
 
     <script src="./js/mobile-menu.js"></script>
-    <!-- <script src="./js/modal.js"></script> --> 
+    <script src="./js/modal.js"></script> 
 </body>
 </html>
