--- a/portfolio.html
+++ b/portfolio.html
@@ -146,7 +146,7 @@
                     </div>
                 </a>
                 </li>
-                <li class="portfolio_nav">
+                <li class="portfolio__nav">
                     <a href="" class="portfolio__block tex-dec">
                         <div class="portfolio__wrapper">
                             <picture>
@@ -167,7 +167,7 @@
                     </div>
                 </a>
                 </li>
-                <li class="portfolio_nav">
+                <li class="portfolio__nav">
                     <a href="" class="portfolio__block tex-dec">
                         <div class="portfolio__wrapper">
                             <picture>
@@ -188,7 +188,7 @@
                     </div>
                 </a>
                 </li>
-                <li class="portfolio_nav">
+                <li class="portfolio__nav">
                     <a href="" class="portfolio__block tex-dec">
                         <div class="portfolio__wrapper">
                             <picture>
@@ -209,7 +209,7 @@
                     </div>
                 </a>
                 </li>
-                <li class="portfolio_nav">
+                <li class="portfolio__nav">
                     <a href="" class="portfolio__block tex-dec">
                         <div class="portfolio__wrapper">
                             <picture>
@@ -230,7 +230,7 @@
                     </div>
                 </a>
                 </li>
-                <li class="portfolio_nav">
+                <li class="portfolio__nav">
                     <a href="" class="portfolio__block tex-dec">
                         <div class="portfolio__wrapper">
                             <picture>
@@ -251,7 +251,7 @@
                     </div>
                 </a>
                 </li>
-                <li class="portfolio_nav">
+                <li class="portfolio__nav">
                     <a href="" class="portfolio__block tex-dec">
                         <div class="portfolio__wrapper">
                             <picture>
@@ -272,7 +272,7 @@
                     </div>
                 </a>
                 </li>
-                <li class="portfolio_nav">
+                <li class="portfolio__nav">
                     <a href="" class="portfolio__block tex-dec">
                         <div class="portfolio__wrapper">
                             <picture>
@@ -293,7 +293,7 @@
                     </div>
                 </a>
                 </li>
-                <li class="portfolio_nav">
+                <li class="portfolio__nav">
                     <a href="" class="portfolio__block tex-dec">
                         <div class="portfolio__wrapper">
                             <picture>
