--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     <main>
             <section class="hero">
                 <div class="container background">
-                    <div class="hero-theme">
+                    <div class="hero__theme">
                         <h1 class="hero-title">ЭФФЕКТНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
                         <button type="button" class="button" data-modal-open>Заказать услугу</button>
                     </div>
