--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <a href="" class="mobile-menu__link tex-dec menu-link">Контакты</a>
                 </li>
             </ul>
-        
+        <div class="menu-contact">
             <nav>
                 <ul class="mobile-contact list">
                     <li class="mobile-contact__item">
@@ -96,6 +96,7 @@
                     <a href="" class="social__link tex-dec">LinkedIn</a>
                 </li>
             </ul>
+            
         </div>
     </header>
 <!--Обложка-->
