Доработка деталей раунд 2

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,11 +48,11 @@
                     </a>
                 </li>
             </ul>
-            <buttton class="menu-mobile" type="button" data-menu-button>
+            <button class="menu-mobile" type="button" data-menu-button>
                 <svg class="menu-icon">
                     <use href="./img/sprite.svg#icon-menu" width="40" height="40"></use>
                 </svg>
-            </buttton>
+            </button>
         </div>
     
         <div class="mobile-menu" data-menu>
@@ -130,12 +130,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio1-img1.jpg 1x , ./img/desktop/portfolio/portfolio1-img@2x.jpg 2x"
-                                 media="(min-width):480px">
+                                 media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio1-img1.jpg 1x , ./img/tablet/portfolio/portfolio1-img@2x.jpg 2x"
-                                 media="(min-width):768px">
+                                 media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio1-img1.jpg 1x , ./img/mobile/portfolio/portfolio1-img@2x.jpg 2x"
-                                 media="(min-width):1200px">
-                                <img class="portfolio-photo" src="./img/portfolio-img-1.jpg" alt="изображение интернет дизайна">
+                                 media="(min-width:1200px)">
+                                <img class="portfolio__photo" src="./img/portfolio-img-1.jpg" alt="изображение интернет дизайна">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                             шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -151,12 +151,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio2-img1.jpg 1x , ./img/desktop/portfolio/portfolio2-img@2x.jpg 2x"
-                                    media="(min-width):480px">
+                                    media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio2-img1.jpg 1x , ./img/tablet/portfolio/portfolio2-img@2x.jpg 2x"
-                                    media="(min-width):768px">
+                                    media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio2-img1.jpg 1x , ./img/mobile/portfolio/portfolio2-img@2x.jpg 2x"
-                                    media="(min-width):1200px">
-                                    <img class="portfolio-photo" src="./img/portfolio-img-2.jpg" alt="постер с баскетбольными игроками">
+                                    media="(min-width:1200px)">
+                                    <img class="portfolio__photo" src="./img/portfolio-img-2.jpg" alt="постер с баскетбольными игроками">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                             для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -172,12 +172,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio3-img1.jpg 1x , ./img/desktop/portfolio/portfolio3-img@2x.jpg 2x"
-                                    media="(min-width):480px">
+                                    media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio3-img1.jpg 1x , ./img/tablet/portfolio/portfolio3-img@2x.jpg 2x"
-                                    media="(min-width):768px">
+                                    media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio3-img1.jpg 1x , ./img/mobile/portfolio/portfolio3-img@2x.jpg 2x"
-                                    media="(min-width):1200px">
-                                <img class="portfolio-photo" src="./img/portfolio-img-3.jpg" alt="логотип ресторана с морепродуктами">
+                                    media="(min-width:1200px)">
+                                <img class="portfolio__photo" src="./img/portfolio-img-3.jpg" alt="логотип ресторана с морепродуктами">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                                 для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -193,12 +193,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio4-img1.jpg 1x , ./img/desktop/portfolio/portfolio4-img@2x.jpg 2x"
-                                    media="(min-width):480px">
+                                    media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio4-img1.jpg 1x , ./img/tablet/portfolio/portfolio4-img@2x.jpg 2x"
-                                    media="(min-width):768px">
+                                    media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio4-img1.jpg 1x , ./img/mobile/portfolio/portfolio4-img@2x.jpg 2x"
-                                    media="(min-width):1200px">
-                                    <img class="portfolio-photo" src="./img/portfolio-img-4.jpg" alt="наушники">
+                                    media="(min-width:1200px)">
+                                    <img class="portfolio__photo" src="./img/portfolio-img-4.jpg" alt="наушники">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                                 для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -214,12 +214,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio5-img1.jpg 1x , ./img/desktop/portfolio/portfolio5-img@2x.jpg 2x"
-                                    media="(min-width):480px">
+                                    media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio5-img1.jpg 1x , ./img/tablet/portfolio/portfolio5-img@2x.jpg 2x"
-                                    media="(min-width):768px">
+                                    media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio5-img1.jpg 1x , ./img/mobile/portfolio/portfolio5-img@2x.jpg 2x"
-                                    media="(min-width):1200px">
-                                    <img class="portfolio-photo" src="./img/portfolio-img-5.jpg" alt="2 коробки">
+                                    media="(min-width:1200px)">
+                                    <img class="portfolio__photo" src="./img/portfolio-img-5.jpg" alt="2 коробки">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                                 для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -235,12 +235,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio6-img1.jpg 1x , ./img/desktop/portfolio/portfolio6-img@2x.jpg 2x"
-                                    media="(min-width):480px">
+                                    media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio6-img1.jpg 1x , ./img/tablet/portfolio/portfolio6-img@2x.jpg 2x"
-                                    media="(min-width):768px">
+                                    media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio6-img1.jpg 1x , ./img/mobile/portfolio/portfolio6-img@2x.jpg 2x"
-                                    media="(min-width):1200px">
-                                <img class="portfolio-photo" src="./img/portfolio-img-6.jpg" alt="Мак с сайтом на мониторе">
+                                    media="(min-width:1200px)">
+                                <img class="portfolio__photo" src="./img/portfolio-img-6.jpg" alt="Мак с сайтом на мониторе">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                                 для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -256,12 +256,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio7-img1.jpg 1x , ./img/desktop/portfolio/portfolio7-img@2x.jpg 2x"
-                                    media="(min-width):480px">
+                                    media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio7-img1.jpg 1x , ./img/tablet/portfolio/portfolio7-img@2x.jpg 2x"
-                                    media="(min-width):768px">
+                                    media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio7-img1.jpg 1x , ./img/mobile/portfolio/portfolio7-img@2x.jpg 2x"
-                                    media="(min-width):1200px">
-                              <img class="portfolio-photo" src="./img/portfolio-img-7.jpg" alt="Открытый журнал">
+                                    media="(min-width:1200px)">
+                              <img class="portfolio__photo" src="./img/portfolio-img-7.jpg" alt="Открытый журнал">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                                 для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -277,12 +277,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio8-img1.jpg 1x , ./img/desktop/portfolio/portfolio8-img@2x.jpg 2x"
-                                    media="(min-width):480px">
+                                    media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio8-img1.jpg 1x , ./img/tablet/portfolio/portfolio8-img@2x.jpg 2x"
-                                    media="(min-width):768px">
+                                    media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio8-img1.jpg 1x , ./img/mobile/portfolio/portfolio8-img@2x.jpg 2x"
-                                    media="(min-width):1200px">
-                                    <img class="portfolio-photo" src="./img/portfolio-img-8.jpg" alt="чайный пакетик">
+                                    media="(min-width:1200px)">
+                                    <img class="portfolio__photo" src="./img/portfolio-img-8.jpg" alt="чайный пакетик">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                                 для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
@@ -298,12 +298,12 @@
                         <div class="portfolio__wrapper">
                             <picture>
                                 <source srcset="./img/desktop/portfolio/portfolio9-img1.jpg 1x , ./img/desktop/portfolio/portfolio9-img@2x.jpg 2x"
-                                    media="(min-width):480px">
+                                    media="(min-width:480px)">
                                 <source srcset="./img/tablet/portfolio/portfolio9-img1.jpg 1x , ./img/tablet/portfolio/portfolio9-img@2x.jpg 2x"
-                                    media="(min-width):768px">
+                                    media="(min-width:768px)">
                                 <source srcset="./img/mobile/portfolio/portfolio9-img1.jpg 1x , ./img/mobile/portfolio/portfolio9-img@2x.jpg 2x"
-                                    media="(min-width):1200px">
-                                    <img class="portfolio-photo" src="./img/portfolio-img-9.jpg" alt="чувак делает вид что работает">
+                                    media="(min-width:1200px)">
+                                    <img class="portfolio__photo" src="./img/portfolio-img-9.jpg" alt="чувак делает вид что работает">
                             </picture>
                             <p class="overlay">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
                             для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
