--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                     </a>
                 </li>
             </ul>
-            <buttton class="menu-mobile" type="button" data-menu-button>
+            <button class="menu-mobile" type="button" data-menu-button>
                 <svg class="menu-icon">
                     <use href="./img/sprite.svg#icon-menu" width="40" height="40"></use>
                 </svg>
-            </buttton>
+            </button>
         </div>
 
         <div class="mobile-menu" data-menu>
