--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <a href="" class="social__link tex-dec">LinkedIn</a>
                 </li>
             </ul>
-            
+        </div>
         </div>
     </header>
 <!--Обложка-->
