--- a/index.html
+++ b/index.html
@@ -194,9 +194,12 @@
                 <ul class="team">
                     <li class="team__worker list">
                         <picture>
-                            <source srcset="./img/desktop/worker/igor-img1.jpg 1x , ./img/desktop/worker/igor-img@2x.jpg 2x" media="(min-width:1200px)">
-                            <source srcset="./img/tablet/worker/igor-img1.jpg 1x , ./img/tablet/worker/igor-img@2x.jpg 2x" media="(min-width:768px)">
-                            <source srcset="./img/mobile/worker/igor-img1.jpg 1x , ./img/mobile/worker/igor-img@2x.jpg 2x" media="(min-width:420px)">
+                            <source srcset="./img/desktop/worker/igor-img1.jpg 1x , ./img/desktop/worker/igor-img@2x.jpg 2x" 
+                             media="(min-width:1200px)">
+                            <source srcset="./img/tablet/worker/igor-img1.jpg 1x , ./img/tablet/worker/igor-img@2x.jpg 2x"
+                             media="(min-width:768px)">
+                            <source srcset="./img/mobile/worker/igor-img1.jpg 1x , ./img/mobile/worker/igor-img@2x.jpg 2x"
+                             media="(min-width:320px)">
                             <img src="./img/igor.jpg" alt="Фото портрет">
                         </picture>
                         
@@ -242,7 +245,7 @@
                             <source srcset="./img/tablet/worker/olga-img1.jpg 1x , ./img/tablet/worker/olga-img@2x.jpg 2x"
                                 media="(min-width:768px)">
                             <source srcset="./img/mobile/worker/olga-img1.jpg 1x , ./img/mobile/worker/olga-img@2x.jpg 2x"
-                                media="(min-width:420px)">
+                                media="(min-width:320px)">
                             <img src="./img/olga.jpg" alt="Фото портрет">
                         </picture>
                         <div class="team__worker_info">
@@ -287,7 +290,7 @@
                             <source srcset="./img/tablet/worker/nikolai-img1.jpg 1x , ./img/tablet/worker/nikolai-img@2x.jpg 2x"
                                 media="(min-width:768px)">
                             <source srcset="./img/mobile/worker/nikolai-img1.jpg 1x , ./img/mobile/worker/nikolai-img@2x.jpg 2x"
-                                media="(min-width:420px)">
+                                media="(min-width:320px)">
                             <img src="./img/nikolai.jpg" alt="Фото портрет">
                         </picture>
                         <div class="team__worker_info">
@@ -332,7 +335,7 @@
                             <source srcset="./img/tablet/worker/mihail-img1.jpg 1x , ./img/tablet/worker/mihail-img@2x.jpg 2x"
                                 media="(min-width:768px)">
                             <source srcset="./img/mobile/worker/mihail-img1.jpg 1x , ./img/mobile/worker/mihail-img@2x.jpg 2x"
-                                media="(min-width:420px)">
+                                media="(min-width:320px)">
                             <img src="./img/mihail.jpg" alt="Фото портрет">
                         </picture>
                         <div class="team__worker_info">
