--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                              media="(min-width:768px)">
                             <source srcset="./img/mobile/worker/igor-img1.jpg 1x , ./img/mobile/worker/igor-img@2x.jpg 2x"
                              media="(min-width:320px)">
-                            <img src="./img/igor.jpg" alt="Фото портрет">
+                            <img src="./img/mobile/worker/igor-img1.jpg" alt="Фото портрет">
                         </picture>
                         
                         <div class="team__worker_info">
@@ -246,7 +246,7 @@
                                 media="(min-width:768px)">
                             <source srcset="./img/mobile/worker/olga-img1.jpg 1x , ./img/mobile/worker/olga-img@2x.jpg 2x"
                                 media="(min-width:320px)">
-                            <img src="./img/olga.jpg" alt="Фото портрет">
+                            <img src="./img/mobile/worker/olga-img1.jpg" alt="Фото портрет">
                         </picture>
                         <div class="team__worker_info">
                         <h3 class="worker-title">Ольга Репина</h3>
@@ -291,7 +291,7 @@
                                 media="(min-width:768px)">
                             <source srcset="./img/mobile/worker/nikolai-img1.jpg 1x , ./img/mobile/worker/nikolai-img@2x.jpg 2x"
                                 media="(min-width:320px)">
-                            <img src="./img/nikolai.jpg" alt="Фото портрет">
+                            <img src="./img/mobile/worker/nikolai-img1.jpg" alt="Фото портрет">
                         </picture>
                         <div class="team__worker_info">
                         <h3 class="worker-title">Николай Тарасов</h3>
@@ -336,7 +336,7 @@
                                 media="(min-width:768px)">
                             <source srcset="./img/mobile/worker/mihail-img1.jpg 1x , ./img/mobile/worker/mihail-img@2x.jpg 2x"
                                 media="(min-width:320px)">
-                            <img src="./img/mihail.jpg" alt="Фото портрет">
+                            <img src="./img/mobile/worker/mihail-img1.jpg" alt="Фото портрет">
                         </picture>
                         <div class="team__worker_info">
                         <h3 class="worker-title">Михаил Ермаков</h3>
